Fixes a bug where main steals click events from the header due to view transitions (broken in chrome)

--- a/site/src/styles/_site_layout.scss
+++ b/site/src/styles/_site_layout.scss
@@ -147,6 +147,7 @@ button.menu-button:hover {
 }
 
 #site-header {
+  z-index: 1;
   background: var(--nav-background);
   --header-padding: 1rem;
   position: fixed;
